kubernetes/mini/apps/selfhosted/homepage/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homepage
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: homepage
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            io.kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP

  egress:
    - toEndpoints: # bazarr
        - matchLabels:
            app.kubernetes.io/name: bazarr
            io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "6767"
              protocol: TCP
    - toEndpoints: # prowlarr
        - matchLabels:
            app.kubernetes.io/name: prowlarr
            io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
    - toEndpoints: # radarr
        - matchLabels:
            app.kubernetes.io/name: radarr
            io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
    - toEndpoints: # sabnzbd
        - matchLabels:
            app.kubernetes.io/name: sabnzbd
            io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints: # sonarr
        - matchLabels:
            app.kubernetes.io/name: sonarr
            io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
